--- a/polls/Pages/bio_catalysts.html
+++ b/polls/Pages/bio_catalysts.html
@@ -115,10 +115,15 @@
                       <td class="column5">
                         <div class="row">
                           <div>
-                            {% if stock.istodayarticle %} <img src="{% static 'images/icon-new.png' %}" alt="logo-bio"  width="40" height="40" > {% endif %} 
+                            {% if stock.istodayarticle %} <img src="{% static 'images/icon-new.png' %}"  width="40" height="40" > {% endif %} 
                           </div>
                           <div class="col-9">
                             {{stock.creation_datetime|date:"d M Y" }} {{stock.creation_datetime|timezone:"US/Eastern"|time:"H:i:s" }}</td>
+
+                            ***
+                            {% for article in today_articles %}
+                              __{{article.creation_datetime|date:"d M Y" }} {{ article.creation_datetime|timezone:"US/Eastern"|time:"H:i:s" }}
+                            {% endfor %}
                           </div>
                         </div>
                         
